# ar-demo

./: AR.qml  AnimatedEntity.qml  Box3D.qml  CMakeLists.txt  Camera3D.qml  Cloud3D.qml  Grid3D.qml  ImageDisplay.qml  Line3D.qml  Path3D.qml  Point3D.qml  PrimitiveEffect.qml  Robot.qml  SceneRootAR.qml  SceneRootVR.qml  SimpleCamera.qml  SkinnedPbrEffect.qml  SliderPicker.qml  Sphere3D.qml  SplashScreen.qml  Surface3D.qml  ToyPlane.qml  VR.qml  Viewer.qml  Voxel3D.qml  VoxelEffect.qml  cameramesh.cpp  cameramesh.h  cedar-bridge.qrc  cloudmesh.cpp  cloudmesh.h  controller.cpp  controller.h  customtype.cpp  customtype.h  gridmesh.cpp  gridmesh.h  imagepainter.cpp  imagepainter.h  linemesh.cpp  (+17 more)
shaders/: fisheye.frag  fisheye.vert  primitive.frag  primitive.vert  voxel.frag  voxel.vert
shaders/es2/: simpleColor.frag  simpleColor.vert
shaders/gl3/: simpleColor.frag
